# 2023_Paper_BLL_LML

./: README.md  pyproject.toml
Pytorch results/: 02_Multvariate_BLL_Toy_example.ipynb
bll/: bayesianlastlayer.py
bll_pytorch/: bayesianlastlayer.py  tools.py  torch_model.py
src/bll_pytorch/: bayesianlastlayer.py  tools.py  torch_model.py
tests/: logmarginallikelihood_test.py  tools_test.py
