[project]
name = "bll_pytorch"
version = "0.2.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
